# moral-spectrum-analyzer

./: .gitignore  CHARTER.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yml
data/confirm/: confirm_features.csv
data/contraction/: toxicity_contraction.json
data/invariance/: feeder_demo.npz  feeder_demo_idx.json  identity_ci_and_rank.json  theta_atscale.json  theta_atscale_result.json  theta_redteam.json  theta_redteam_result.json
data/reliability/: calibration_summary.json  specificity_verdicts.json
data/spectrum/: demo_emb.npy  demo_emb_labse.npy  demo_emb_labse.npy.idx.json  feeder_train_hashes.json  spectrum_features.csv  spectrum_texts.json
data/variants/: variants.json  variants_emb.npy  variants_emb.npy.idx.json
data/xling/: xling_emb_bge.npy  xling_emb_bge.npy.idx.json  xling_emb_labse.npy  xling_texts.json
data/xling_scale/: xling_scale_bge.npy  xling_scale_idx.json  xling_scale_labse.npy  xling_scale_result.json
docs/: CALIBRATED_AUTHORITY.md  CAPSULE.md  DISCOVERY_ROADMAP.md  IDENTITY_ATTACK.md  INVARIANCE_FINDINGS.md  PREREG_ADVERSARIAL_ROBUSTNESS.md  REGATE.md  SEXUAL_CONTENT_ADMISSION.md  SPECTRUM_FINDINGS.md
docs/brand/: README.md
scripts/: assess_sexual.py  band1_contraction.py  build_capsule_pptx.py  build_identity_attack.py  confirm_dims.py  confirm_dims_atlas.py  diagnose_transfer_atlas.py  embed_demo_atlas.py  embed_feeders_for_theta.py  export_demo_texts.py  fit_contraction.py  invariance_v2.py  make_variants.py  make_xling.py  make_xling_retry.py  measure_attack.py  measure_theta_d.py  measure_theta_d_atscale.py  measure_xling.py  measure_xling_atscale.py  nrp_check.py  run_demo.py  run_invariance.py  run_spectrum.py  score_demoset_atlas.py
src/gtc/: __init__.py  audit.py  classgen.py  cli.py  config.py  contraction.py  decision.py  invariance.py  invariance_mechanism.py  llm.py  pipeline.py  report.py
src/gtc/perception/: __init__.py  base.py  cached.py  stub.py
src/gtc/spectrum/: analyzer.py  render.py
src/moral_spectrum/: __init__.py  audit.py  classgen.py  cli.py  config.py  contraction.py  decision.py  invariance.py  invariance_mechanism.py  llm.py  pipeline.py  reliability.py  report.py
src/moral_spectrum/perception/: __init__.py  base.py  cache.jsonl  cached.py  stub.py
src/moral_spectrum/scenarios/: __init__.py
src/moral_spectrum/spectrum/: __init__.py  analyzer.py  render.py
tests/: test_classgen.py  test_contraction.py  test_invariance_mechanism.py  test_perception_stub.py  test_pipeline.py  test_reliability.py  test_scenarios.py  test_theta_atscale.py
